@@ -28,6 +28,7 @@ AC_OUTPUT([
       docs/examples/connect/Makefile
       docs/examples/list_all_protocols/Makefile
       docs/examples/list_contacts/Makefile
+      docs/examples/set_presence/Makefile
 
     docs/book/Makefile
 ])
